[metadata] Add profile-formats.

--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -7,3 +7,4 @@ manifest-hashes = SHA256 SHA512 WHIRLPOOL
 sign-manifests = false
 sign-commits = true
 eapis-deprecated = 0 1 2 3
+profile-formats = portage-2
